@@ -28,96 +28,95 @@ import org.powermock.reflect.internal.WhiteboxImpl;
  */
 public class EasyMockMethodInvocationControl<T> implements MethodInvocationControl {
 
-	private MockInvocationHandler invocationHandler;
+    private MockInvocationHandler invocationHandler;
 
-	private Set<Method> mockedMethods;
+    private Set<Method> mockedMethods;
 
-	@SuppressWarnings("unused")
-	private T mockInstance;
+    private T mockInstance;
 
-	/**
-	 * Initializes internal state.
-	 * 
-	 * @param invocationHandler
-	 *            The mock invocation handler to be associated with this
-	 *            instance.
-	 * @param methodsToMock
-	 *            The methods that are mocked for this instance. If
-	 *            <code>methodsToMock</code> is null all methods for the
-	 *            <code>invocationHandler</code> are considered to be mocked.
-	 * @param mockInstance
-	 *            The actual mock instance. May be <code>null</code>. Even
-	 *            though the mock instance may not be used it's needed to keep a
-	 *            reference to this object otherwise it may be garbage collected
-	 *            in some situations. For example when mocking static methods we
-	 *            don't return the mock object and thus it will be garbage
-	 *            collected (and thus the finalize method will be invoked which
-	 *            will be caught by the proxy and the test will fail because we
-	 *            haven't setup expectations for this method) because then that
-	 *            object has no reference. In order to avoid this we keep a
-	 *            reference to this instance here.
-	 */
-	public EasyMockMethodInvocationControl(MockInvocationHandler invocationHandler, Set<Method> methodsToMock, T mockInstance) {
-		if (invocationHandler == null) {
-			throw new IllegalArgumentException("Invocation Handler cannot be null.");
-		}
+    /**
+     * Initializes internal state.
+     * 
+     * @param invocationHandler
+     *            The mock invocation handler to be associated with this
+     *            instance.
+     * @param methodsToMock
+     *            The methods that are mocked for this instance. If
+     *            <code>methodsToMock</code> is null all methods for the
+     *            <code>invocationHandler</code> are considered to be mocked.
+     * @param mockInstance
+     *            The actual mock instance. May be <code>null</code>. Even
+     *            though the mock instance may not be used it's needed to keep a
+     *            reference to this object otherwise it may be garbage collected
+     *            in some situations. For example when mocking static methods we
+     *            don't return the mock object and thus it will be garbage
+     *            collected (and thus the finalize method will be invoked which
+     *            will be caught by the proxy and the test will fail because we
+     *            haven't setup expectations for this method) because then that
+     *            object has no reference. In order to avoid this we keep a
+     *            reference to this instance here.
+     */
+    public EasyMockMethodInvocationControl(MockInvocationHandler invocationHandler, Set<Method> methodsToMock, T mockInstance) {
+        if (invocationHandler == null) {
+            throw new IllegalArgumentException("Invocation Handler cannot be null.");
+        }
 
-		this.invocationHandler = invocationHandler;
-		this.mockedMethods = methodsToMock;
-		this.mockInstance = mockInstance;
-	}
+        this.invocationHandler = invocationHandler;
+        this.mockedMethods = methodsToMock;
+        this.mockInstance = mockInstance;
+    }
 
-	/**
-	 * Initializes internal state.
-	 * 
-	 * @param invocationHandler
-	 *            The mock invocation handler to be associated with this
-	 *            instance.
-	 * @param methodsToMock
-	 *            The methods that are mocked for this instance. If
-	 *            <code>methodsToMock</code> is null all methods for the
-	 *            <code>invocationHandler</code> are considered to be mocked.
-	 */
-	public EasyMockMethodInvocationControl(MockInvocationHandler invocationHandler, Set<Method> methodsToMock) {
-		this(invocationHandler, methodsToMock, null);
-	}
+    /**
+     * Initializes internal state.
+     * 
+     * @param invocationHandler
+     *            The mock invocation handler to be associated with this
+     *            instance.
+     * @param methodsToMock
+     *            The methods that are mocked for this instance. If
+     *            <code>methodsToMock</code> is null all methods for the
+     *            <code>invocationHandler</code> are considered to be mocked.
+     */
+    public EasyMockMethodInvocationControl(MockInvocationHandler invocationHandler, Set<Method> methodsToMock) {
+        this(invocationHandler, methodsToMock, null);
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public boolean isMocked(Method method) {
-		return mockedMethods == null || (mockedMethods != null && mockedMethods.contains(method));
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public boolean isMocked(Method method) {
+        return mockedMethods == null || (mockedMethods != null && mockedMethods.contains(method));
+    }
 
-	public Object invoke(Object proxy, Method method, Object[] arguments) throws Throwable {
-		return invocationHandler.invoke(proxy, method, arguments);
-	}
+    public Object invoke(Object proxy, Method method, Object[] arguments) throws Throwable {
+        return invocationHandler.invoke(mockInstance == null ? proxy : mockInstance, method, arguments);
+    }
 
-	public MockType getMockType() {
-		return WhiteboxImpl.getInternalState(invocationHandler.getControl(), MockType.class);
-	}
+    public MockType getMockType() {
+        return WhiteboxImpl.getInternalState(invocationHandler.getControl(), MockType.class);
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public Object replay(Object... mocks) {
-		invocationHandler.getControl().replay();
-		return null;
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public Object replay(Object... mocks) {
+        invocationHandler.getControl().replay();
+        return null;
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public Object verify(Object... mocks) {
-		invocationHandler.getControl().verify();
-		return null;
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public Object verify(Object... mocks) {
+        invocationHandler.getControl().verify();
+        return null;
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public Object reset(Object... mocks) {
-		invocationHandler.getControl().reset();
-		return null;
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public Object reset(Object... mocks) {
+        invocationHandler.getControl().reset();
+        return null;
+    }
 }
